K8s/resource/probe.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: probe-test
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
  spec:
    containers:
    - name: probe-test
      image: nginx:latest
      ports:
      - containerPort: 80
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 10
#      readinessProbe:
#        tcpSocket:
#          port: 8080
#        initialDelaySeconds: 15
#        periodSeconds: 10
